--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,10 +25,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:name="ElloShare">
         <activity
             android:name="com.weatherlight.elloshare.ElloShareActivity"
-            android:label="@string/title_activity_ello_share" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -51,7 +51,7 @@
         </activity>
         <activity
             android:name="com.weatherlight.elloshare.ElloWebViewLoginActivity"
-            android:label="@string/title_activity_ello_web_view_login" >
+            android:label="@string/app_name" >
         </activity>
     </application>
 
