Larger thumbnails, rotated correctly

--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../crosswalk-webview-9.38.208.1-arm
+android.library.reference.1=../../Documents/workspace/crosswalk-webview-9.38.208.1-arm
