--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:palette-v7:+'
     compile 'com.github.traex.rippleeffect:library:1.2.2'
     compile files('libs/httpclientandroidlib-1.2.0.jar')
     compile files('libs/jsoup-1.8.1.jar')
