--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,13 +25,14 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo" >
+        android:logo="@drawable/ic_launcher"
+        android:theme="@style/Theme.AppCompat.Light">
         <activity
             android:name=".ElloShareActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|screenSize">
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.SEND" />
+            <action android:name="android.intent.action.SEND" />
 
                 <category android:name="android.intent.category.DEFAULT" />
 
@@ -47,9 +48,8 @@
         </activity>
         <activity
             android:name=".ElloWebViewLoginActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|screenSize" >
-        </activity>
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".ImagePickerActivity"
             android:label="@string/app_name" >
