Add Android Design support library and migrate to FloatingActionButtons
Conflicts:
	.idea/workspace.xml
	app/src/main/java/com/weatherlight/elloshare/ElloShareActivity.java
	app/src/main/java/com/weatherlight/elloshare/ElloWebViewLoginActivity.java

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,13 @@ android {
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
 }
 dependencies {
+    compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'com.android.support:palette-v7:+'
